[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.0"
authors = ["florianvazelle"]
edition = "2024"
license = "MIT"
repository = "https://github.com/florianvazelle/imgui-extras"

[workspace.dependencies]
imgui = "0.12"
sdl3 = "0.15"
shaderc = "0.9"
mint = "0.5"
glam = "0.30"
serde = "1.0"
toml = "0.9"
imgui-sdl3 = "0.4"
