[package]
name = "imgui-sdl3"
description = "Integration of ImGui with SDL3"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["imgui", "sdl3", "gui", "renderer"]
categories = ["gui", "rendering", "graphics"]

[dependencies]
imgui.workspace = true
sdl3.workspace = true

[build-dependencies]
shaderc.workspace = true
